# pydantic-cdp

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  main2.py  pyproject.toml
cdpify/domains/: __init__.py  shared.py
cdpify/domains/accessibility/: client.py  commands.py  events.py  types.py
cdpify/domains/animation/: client.py  commands.py  events.py  types.py
cdpify/domains/audits/: client.py  commands.py  events.py  types.py
cdpify/domains/backgroundservice/: client.py  commands.py  events.py  types.py
cdpify/domains/browser/: client.py  commands.py  events.py  types.py
cdpify/domains/cachestorage/: client.py  commands.py  types.py
cdpify/domains/cast/: client.py  commands.py  events.py  types.py
cdpify/domains/console/: commands.py  events.py  types.py
cdpify/domains/css/: client.py  commands.py  events.py  types.py
cdpify/domains/debugger/: client.py  commands.py  events.py  types.py
cdpify/domains/deviceorientation/: commands.py
cdpify/domains/dom/: client.py  commands.py  events.py  types.py
cdpify/domains/domdebugger/: client.py  commands.py  types.py
cdpify/domains/domsnapshot/: client.py  commands.py  types.py
cdpify/domains/domstorage/: client.py  commands.py  events.py  (+1 more)
cdpify/generator/: generator.py
pydantic_cpd/: __init__.py  client.py  events.py  exceptions.py
pydantic_cpd/cdp/: __init__.py  base.py
pydantic_cpd/domains/: __init__.py  base.py
pydantic_cpd/generator/: __main__.py  config.py  downloader.py  generator.py  models.py  parser.py  type_mapper.py
specs/: browser_protocol.json  js_protocol.json
(+504 files in other folders)
